--- a/nginx.conf
+++ b/nginx.conf
@@ -73,7 +73,7 @@ http {
 		location /fonts/ { }
 		location /js/ { }
 		location /css/ { }
-		location /image/ { }
+		location /icons/ { }
 
 		location / {
 			proxy_set_header Host $http_host;
