--- a/nginx.conf
+++ b/nginx.conf
@@ -69,11 +69,26 @@ http {
 
 		root /home/isucon/isubata/webapp/public;
 
-		location /favicon.ico { }
-		location /fonts/ { }
-		location /js/ { }
-		location /css/ { }
-		location /icons/ { }
+		location /favicon.ico {
+			expires 24h;
+			add_header Cache-Control public;
+		}
+		location /fonts/ {
+			expires 24h;
+			add_header Cache-Control public;
+		}
+		location /js/ {
+			expires 24h;
+			add_header Cache-Control public;
+		}
+		location /css/ {
+			expires 24h;
+			add_header Cache-Control public;
+		}
+		location /icons/ {
+			expires 24h;
+			add_header Cache-Control public;
+		}
 
 		location / {
 			proxy_set_header Host $http_host;
